// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

option go_package = "github.ibm.com/blockchaindb/server/pkg/worldstate/leveldb";

package leveldb;

import "types/block_and_transaction.proto";

message ValueAndMetadata {
  bytes value = 1;
  types.Metadata metadata = 2;
}
